--- a/narsimhakhedkar.com/index.html
+++ b/narsimhakhedkar.com/index.html
@@ -44,34 +44,13 @@
 
 <script type="3a612eb3b8b9772aee7b0ef7-text/javascript" src="assets/js/vendor/modernizr-3.3.1.min.js"></script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119758227-1" type="3a612eb3b8b9772aee7b0ef7-text/javascript"></script>
-<script type="3a612eb3b8b9772aee7b0ef7-text/javascript">
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-119758227-1');
-    </script>
-
-<script type="3a612eb3b8b9772aee7b0ef7-text/javascript">
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                '../www.googletagmanager.com/gtm5445.html?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-K48KRFS');
-    </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PXB6HHJ');</script>
+    <!-- End Google Tag Manager -->
 
 <script src="../js.api.here.com/v3/3.1/mapsjs-core.js" type="3a612eb3b8b9772aee7b0ef7-text/javascript" charset="utf-8"></script>
 <script src="../js.api.here.com/v3/3.1/mapsjs-service.js" type="3a612eb3b8b9772aee7b0ef7-text/javascript" charset="utf-8"></script>
@@ -80,8 +59,10 @@
 </head>
 <body>
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K48KRFS" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXB6HHJ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
 <div class="crt-wrapper">
 <header id="crt-header">
